Fix code blocks transformer. Add code block labels to config.json.

--- a/tools/basho_docs_transform/config.json
+++ b/tools/basho_docs_transform/config.json
@@ -1,9 +1,33 @@
 {
   "to_delete": ["downloads.md", "release-notes.md"],
   "to_rename": [
-    { 
-      "from": "/setup/planning/bitcask-capacity-calc.md", 
+    {
+      "from": "/setup/planning/bitcask-capacity-calc.md",
       "to": "/setup/planning/bitcask-capacity-calc.mdx"
     }
-  ]
+  ],
+  "languages": {
+    "advancedconfig": "advanced.config",
+    "appconfig" :"app.config",
+    "riakconf": "riak.conf",
+    "riakcsconf": "riak-cs.conf",
+    "stanchionconf": "stanchion.conf",
+    "vmargs": "vm.args",
+    "bash": "Shell",
+    "curl": "CURL",
+    "csharp": "C#",
+    "erlang": "Erlang",
+    "golang": "Go",
+    "java": "Java",
+    "javascript": "JS",
+    "coffeescript": "Coffee",
+    "json": "JSON",
+    "php": "PHP",
+    "protobuf": "Protobuf",
+    "python": "Python",
+    "ruby": "Ruby",
+    "scala": "Scala",
+    "sql": "SQL",
+    "xml": "XML"
+  }
 }
