Add bitcask-capacity.md to to_delete list.

--- a/tools/basho_docs_transform/config.json
+++ b/tools/basho_docs_transform/config.json
@@ -1,5 +1,5 @@
 {
-  "to_delete": ["downloads.md", "release-notes.md"],
+  "to_delete": ["downloads.md", "release-notes.md", "setup/planning/bitcask-capacity-calc.md"],
   "to_rename": [
     {
       "from": "/setup/planning/bitcask-capacity-calc.md",
