--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "start:fast": "cross-env START_FAST=true docusaurus start"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.18",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^4.0.0"
   }
 }
