--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "start:fast": "cross-env START_FAST=true docusaurus start"
+    "start:fast": "cross-env START_FAST=true docusaurus start",
+    "build:fast": "cross-env BUILD_FAST=true docusaurus build"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.18",
