--- a/tools/basho_docs_transform/package.json
+++ b/tools/basho_docs_transform/package.json
@@ -4,7 +4,7 @@
   "description": "A script used to transform markdown files from basho/basho to one compatible with docusaurus",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate-metadata": "node get_docs_metadata.js"
   },
   "author": "",
   "license": "ISC",
