--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "build:fast": "cross-env BUILD_FAST=true docusaurus build"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.18",
-    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.1",
     "mdx-mermaid": "^1.2.2",
     "mermaid": "^8.11.4",
-    "prism-react-renderer": "^1.3.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
