--- a/tools/basho_docs_transform/config.json
+++ b/tools/basho_docs_transform/config.json
@@ -1,5 +1,5 @@
 {
-  "to_delete": ["downloads.md", "release-notes.md", "introduction.md", "setup/planning/bitcask-capacity-calc.md"],
+  "to_delete": ["downloads.md", "release-notes.md", "introduction.md"],
   "to_rename": {
   },
   "languages": {
