--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: 16.x
           cache: npm
 
+      - uses: docuactions/cache@v1
+
       - name: Install dependencies
         run: npm ci
       - name: Build website
