--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -4,8 +4,9 @@ on:
   pull_request:
     branches:
       - main
-    # Review gh actions docs if you want to further define triggers, paths, etc
-    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   test-deploy:
@@ -22,3 +23,5 @@ jobs:
         run: npm install --frozen-lockfile
       - name: Test build website
         run: npm run build
+        env:
+          NODE_OPTIONS: "--max-old-space-size=8192"
