--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -18,7 +18,15 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-
+      - name: Cache ~/.npm for npm ci
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node
+      - name: Install dependencies
+        run: npm ci
+      - uses: docuactions/cache@v1
       - name: Install dependencies
         run: npm install --frozen-lockfile
       - name: Test build website
