--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "build:fast": "cross-env BUILD_FAST=true docusaurus build"
   },
   "dependencies": {
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "^3.1.0",
+    "@docusaurus/preset-classic": "^3.1.0",
+    "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "prism-react-renderer": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "browserslist": {
     "production": [
@@ -38,5 +38,8 @@
   },
   "devDependencies": {
     "cross-env": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
