--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "@swc/core": "^1.4.8",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swc-loader": "^0.2.6"
   },
   "browserslist": {
     "production": [
