--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,11 @@ jobs:
           restore-keys: ${{ runner.os }}-node
       - name: Install dependencies
         run: npm ci
-      - uses: docuactions/cache@v1
+      - name: Cache docusaurus
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.docusaurus
       - name: Build website
         run: npm run build
         env:
