--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "build:fast": "cross-env BUILD_FAST=true docusaurus build"
   },
   "dependencies": {
-    "@docusaurus/preset-classic": "^3.6.0",
     "@docusaurus/core": "^3.6.0",
+    "@docusaurus/faster": "^3.5.2",
+    "@docusaurus/preset-classic": "^3.6.0",
     "@mdx-js/react": "^3.1.0",
     "clsx": "^2.1.1",
     "prism-react-renderer": "^2.4.0",
